<resources>
    <string name="app_name">房源宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error1">网络不给力请稍后再试吧</string>
    <string name="error2"> 重试</string>
    <string name="error3"> 或者拨打房源宝客服电话 </string>
    <string name="error4"> 客服电话</string>
    <string name="desc">backgrondImage</string>
    <string name="mine_realse_button">修改</string>
    <string name="sell_nodata">暂无记录</string>
    <string name="main_tab_search_house">找房</string>
    <string name="main_tab_post">发布</string>
    <string name="main_tab_mine">我的</string>
    <string name="main_title_sell">出售</string>
    <string name="main_title_rent">出租</string>
    <string name="main_recent_search">最近搜索</string>
    <string name="search_house_search_key">输入小区名称搜索</string>
    <string name="search_by_condition_district">按区域板块筛选</string>
    <string name="released_get_task_reward">暂仅支持出租房源,通过奖励</string>
    <string name="released_get_task_bj_reward">看房用房源宝拍照,通过奖励</string>
    <string name="released_invite_reward">邀请一位审核通过奖励</string>
    <string name="released_reward_yuan">元</string>
    <string name="info_change_house">改盘</string>
    <string name="advert_detail_title">活动详情</string>
    <string name="released_sell_single_building">小区单栋</string>
    <string name="released_unit_single_building">无单元</string>
    <string name="released_sell_reward">发布一套房子审核通过奖励</string>
    <string name="dialog_select_foot_msg">请选择小区子划分</string>
    <string name="release_error">请确认业主信息是否完善!</string>
    <string name="released_rent_single_building">小区单栋</string>
    <string name="released_rent_single_unit">无单元</string>
    <string name="release_villa">别墅</string>
    <string name="release_villa_content">“独栋别墅”、“独门独户”请勾选“别墅”</string>
    <string name="released_rent_reward">发布一套房子审核通过奖励</string>
    <string name="change_house_single_building">独栋</string>
    <string name="change_house_not_unit">无单元</string>
    <string name="released_change_reward">提供已售、已租信息,通过奖励</string>
    <string name="released_change_seat_number">楼栋号</string>
    <string name="clickfiltrate">按区域板块筛选</string>
    <string name="history">最近搜索</string>
    <string name="norearoe">暂时没有您想要的小区</string>
    <string name="newarea">新增小区</string>
    <string name="please">请输入小区名称搜索</string>
    <string name="search_hint">请输入小区名...</string>
    <string name="search_build_hint">请输入楼栋号...</string>
    <string name="search_recent_title">最近使用过的小区</string>
    <string name="search__local_nohistory">暂无历史记录</string>
    <string name="search_remote_nohistory">暂时没有您想要的小区</string>
    <string name="search_build_remote_nohistory">暂时没有您想要的楼栋号</string>
    <string name="exception_again">重试</string>
    <string name="nodata_search">没有符合条件的房源</string>
    <string name="released_infos">发布详情</string>
    <string name="house_image_take_photo">实地拍照</string>
    <string name="house_image_change_house">修改房型</string>
    <string name="released_record_audit">审核中</string>
    <string name="released_record_building">号 • </string>
    <string name="released_record_single_building">独栋 •</string>
    <string name="released_record_room"> 室 </string>
    <string name="released_record_change">修改</string>
    <string name="released_record_owner_name">业主</string>
    <string name="released_record_phone_number">联系电话</string>
    <string name="released_record_price">到手价</string>
    <string name="released_record_rent_price">租金</string>
    <string name="released_record_price_wan">万</string>
    <string name="released_record_price_yuan">元/月</string>
    <string name="released_record_square_meters">平米</string>
    <string name="released_record_house_type">房型</string>
    <string name="released_record_house_type_bedroom">室</string>
    <string name="released_record_house_type_livingRoom">厅</string>
    <string name="released_record_house_type_wc">卫</string>
    <string name="released_record_proportion">面积</string>
    <string name="released_record_proportion_meters">平米</string>
    <string name="released_record_area">区域</string>
    <string name="released_record_plate">板块</string>
    <string name="released_record_area_address">小区地址</string>
    <string name="released_record_rent_change_type">出租改盘:</string>
    <string name="released_record_sell_change_type">出售改盘:</string>
    <string name="released_record_change_house_reason">改盘理由:</string>
    <string name="released_record_change_report_reason">举报理由:</string>
    <string name="dialog_msg_area">请输入小区名称！</string>
    <string name="dialog_msg_seat">请输入楼栋号！</string>
    <string name="dialog_msg_util">请输入单元号！</string>
    <string name="dialog_msg_room_menpai">请输入门牌号！</string>
    <string name="dialog_msg_room_shi">请输入室号！</string>
    <string name="released_record_infos_change">发布</string>
    <string name="released_record_infos_change_owner_info">业主信息</string>
    <string name="released_record_infos_owner_name">业主姓名</string>
    <string name="released_record_infos_owner_phone">联系电话</string>
    <string name="released_record_infos_change_owner_add">+添加业主信息</string>
    <string name="released_record_infos_change_pirce">到手价</string>
    <string name="released_record_infos_change_wan">万</string>
    <string name="released_record_infos_change_housing_info">房源信息</string>
    <string name="released_record_infos_change_proportion">面积</string>
    <string name="released_record_infos_change_square_meters">平米</string>
    <string name="amend_houseinfo_backbtn">修改房源信息</string>
    <string name="amend_houseinfo_savebtn">保存</string>
    <string name="amend_houseinfo_space">平米</string>
    <string name="amend_houseinfo_price">万</string>
    <string name="amend_houseinfo_rent">元  / 月</string>
    <string name="amend_houseinfo_space_hint">房源面积</string>
    <string name="amend_houseinfo_price_hint">房源售价</string>
    <string name="amend_houseinfo_rent_hint">房源出租价</string>
    <string name="select_house_config_backbtn">房源配套信息</string>
    <string name="select_house_config_type_backbtn">填写配套</string>
    <string name="select_house_config_type_maopi">毛坯</string>
    <string name="select_house_config_type_daizhuangxiu">带装修</string>
    <string name="select_house_config_completed">填写配套完成</string>
    <string name="gettask_title">领取拍照任务</string>
    <string name="gettask_backbtn">返回</string>
    <string name="gettask_notice">请输入您要为房源宝拍照的房源。\n若该房源无照片则可领取该拍照任务，完成后奖10元.</string>
    <string name="gettask_neighborhood_name">小区名：</string>
    <string name="gettask_build">楼栋号：</string>
    <string name="gettask_bed">室号：</string>
    <string name="gettask_gettaskbtn">领取任务</string>
    <string name="gettask_canget_dialog_msg">领取拍照任务后需要在48小时实地拍照并上传，是否领取任务？</string>
    <string name="gettask_cantget_dialog_msg">该房源还未发布出售/出租，请先发布该房源租售信息。</string>
    <string name="gettask_release_success">房源发布成功，是否同时领取该房源拍照任务？</string>
    <string name="gettask_release_after_msg">房源已发布成功，是否领取拍照任务？</string>
    <string name="gettask_release_after_yes">领取</string>
    <string name="gettask_release_after_no">取消</string>
    <string name="gettask_btn_lqrw">领取任务</string>
    <string name="gettask_btn_yhzs">以后再说</string>
    <string name="gettask_btn_fbcs">发布出售</string>
    <string name="gettask_btn_fbcc">发布出租</string>
    <string name="gettask_util_msg">必填，若无请输入"0"</string>
    <string name="gettask_util_building">若该小区只有一栋楼,请选择"小区单栋"</string>
    <string name="gettask_util_unit">若该楼不分单元,请选择"无单元"</string>
    <string name="gettask_menpai_msg">数字或字母，最多4个字符</string>
    <string name="gettask_cant_find">您已有10项拍照任务，请先完成再领取新任务</string>
    <string name="share_app_content">推荐中介必备手机软件房源宝。下载地址%1$s ，注册送10元现金！</string>
    <string name="share">分享</string>
    <string name="sell_list_item_dudong">独栋</string>
    <string name="sell_list_item_wan">万</string>
    <string name="sell_list_item_hao">单元</string>
    <string name="sell_list_item_shi">室</string>
    <string name="sell_list_item_ting">厅</string>
    <string name="sell_list_item_wei">卫</string>
    <string name="sell_list_item_pinmi">平米</string>
    <string name="sell_list_item_shtg">审核通过</string>
    <string name="sell_list_item_shsb">审核失败</string>
    <string name="sell_list_item_shz">审核中</string>
    <string name="sell_list_dialog_shz">该房源还在审核中</string>
    <string name="sell_list_dialog_cantlook">审核未通过不能查看</string>
    <string name="released_sell_next_back">返回</string>
    <string name="released_sell">发布出售</string>
    <string name="released_sell_sumbit">提交</string>
    <string name="released_sell_desc">该房源还未发布，赶紧完善信息，通过审核获返利</string>
    <string name="released_sell_owner_info">业主信息</string>
    <string name="released_sell_owner_name">业主姓名</string>
    <string name="released_sell_owner_phone">联系电话</string>
    <string name="released_sell_owner_add">增加业主和联系电话</string>
    <string name="released_sell_price_info">价格信息</string>
    <string name="released_sell_come_hand">到手价</string>
    <string name="released_sell_price_wan">万</string>
    <string name="released_sell_housing_info">房屋信息</string>
    <string name="released_sell_housing_type">房型 </string>
    <string name="released_sell_housing_area">面积</string>
    <string name="released_sell_housing_meters">平米</string>
    <string name="released_sell_back">返回</string>
    <string name="released_sell_title">发布出售</string>
    <string name="released_sell_next">下一步</string>
    <string name="released_sell_area_name">小区名称</string>
    <string name="released_sell_seat_number">楼栋号</string>
    <string name="released_sell_room_no">室号</string>
    <string name="released_sell_room_number">(门牌号)</string>
    <string name="released_sell_unit_no">单元号</string>
    <string name="released_sell_describe">若无小区名称，使用地址替代，例如“武定西路1200弄”</string>
    <string name="released_sell_desc_line2">栋座号使用数字，独栋则勾选“独栋”</string>
    <string name="released_sell_desc_line3">室号使用数字，如“1A”需填写“101”室</string>
    <string name="released_sell_desc_line4">若该小区只有一栋楼,请选择"小区单栋"</string>
    <string name="released_sell_desc_line5">若该楼不分单元,请选择"无单元"</string>
    <string name="picture_result">图</string>
    <string name="release_sell_dialog_error">请输入小区名称</string>
    <string name="reviewing">您的账号正在审核中</string>
    <string name="reviewing_det">我们会在24小时内审核后通知到您</string>
    <string name="review_failed">抱歉，您未能通过身份审核</string>
    <string name="review_again">重新完善注册信息</string>
    <string name="failed_remark">失败原因：</string>
    <string name="again_register_content1">房源宝是专为经纪人服务的，为此我们希望您提供真实信息，以进行审核。</string>
    <string name="again_register_content2">您是通过同行推荐知道这个APP的吗？请输入TA的房源宝邀请码</string>
    <string name="again_register_commit">从新提交注册信息</string>
    <string name="complete_resgiter">完成注册</string>
    <string name="upload_id_card">拍照上传身份证</string>
    <string name="upload_bs_card">拍照上传名片</string>
    <string name="re_upload_id_card">重拍身份证</string>
    <string name="re_upload_bs_card">重拍名片</string>
    <string name="complete_info">完善您的信息</string>
    <string name="commit_info_again">重新提交注册信息</string>
    <string name="please_choose_city">请选择城市</string>
    <string name="exit_login">退出登录</string>
    <string name="fang_yuan_bao">房源宝</string>
    <string name="phone_number">手机号</string>
    <string name="ver_code">验证码</string>
    <string name="goto_next">继续</string>
    <string name="confirm">确定</string>
    <string name="rent_info_price_yuan">元/月</string>
    <string name="rent_info_room">室</string>
    <string name="rent_info_ting">厅</string>
    <string name="rent_info_wei">卫</string>
    <string name="rent_info_square_meters">平米</string>
    <string name="common_problem_title">常见问题</string>
    <string name="common_problem_rent_rule">发布出租规则</string>
    <string name="common_problem_sell_rule">发布出售规则</string>
    <string name="common_problem_award_rule">奖金发放规则</string>
    <string name="change_new_phone_title">取消</string>
    <string name="change_new_phone">新手机号</string>
    <string name="change_new_phone_verification">验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="change_new_complete">完成</string>
</resources>