<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gettask_canget_dialog_msg"
        android:textColor="#3c3c3c"
        android:textSize="18sp" 
        android:lineSpacingExtra="5dp"
        />

    <Button
        android:id="@+id/getTaskBtn"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/start_selector"
        android:text="@string/gettask_btn_lqrw"
        android:textColor="@color/white_action" 
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/cancleBtn"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_cancle_btn"
        android:text="@string/gettask_btn_yhzs"
        android:textColor="@color/white_action" 
        android:textSize="18sp"
        />

</LinearLayout>