<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f1"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/actionbar"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/serchback"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_action_up_search"
            android:background="@drawable/text_down_selector"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/tetx_title_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/search_edtext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_searchfield"
            android:focusable="true"
            android:hint="@string/please"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="28dip"
            android:layout_height="28dip"
            android:layout_marginRight="5dip"
            android:background="@drawable/bg_searchfield"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/clickfiltrate"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/select_item_selector"
            android:gravity="left|center_vertical"
            android:text="@string/clickfiltrate"
            android:textColor="#39a3e2"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d1d5d8"
        android:contentDescription="@string/desc" />

    <ListView
        android:id="@+id/lv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/history"
            android:textColor="#7f7f7f"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/search__local_nohistory"
            android:textColor="@color/black_gray"
            android:visibility="gone"
            tools:ignore="HardcodedText" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#d1d5d8"
            android:contentDescription="@string/desc" />

        <ListView
            android:id="@+id/lv_record"
             android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/norearoe"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textColor="#7f7f7f"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/serch_add"
            android:layout_width="135dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:background="@drawable/start_selector"
            android:gravity="center"
            android:text="@string/newarea"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</LinearLayout>