<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_problem_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f1"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@color/actionbar"
            android:padding="0dp"
            android:tag="actionBar">

            <TextView
                android:id="@+id/common_problem_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/text_down_selector"
                android:drawableLeft="@drawable/ic_action_up_home"
                android:gravity="center|center_horizontal"
                android:text="@string/common_problem_title"
                android:textColor="#ffffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rent_rule"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/catch_btn_selector"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/common_problem_rent_rule"
                    android:textColor="#12c1c4"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sell_rule"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/catch_btn_selector"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/common_problem_sell_rule"
                    android:textColor="#12c1c4"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/award_rule"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/catch_btn_selector"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/common_problem_award_rule"
                    android:textColor="#12c1c4"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>