<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_phone_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/register_background"
        android:clickable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/info_background">


            <TextView
                android:id="@+id/new_phone_back"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/text_down_selector"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_action_up_home"
                android:gravity="center"
                android:text="@string/change_new_phone_title"
                android:textColor="@color/tetx_title_color"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffffff"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="更换手机号"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/change_new_phone"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <com.huoqiu.widget.PhoneEditTextView
                android:id="@+id/change_new_phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/textview_selector"
                android:numeric="integer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/change_new_phone_verification"
                android:layout_marginLeft="16dp"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_phone_verification"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:background="@drawable/textview_selector"
                android:numeric="integer" />

            <Button
                android:id="@+id/get_verification"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/tetx_title_color"
                android:textSize="16sp"
                android:background="@drawable/start_selector"
                android:text="@string/get_verification"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <TextView
            android:id="@+id/change_new_phone_complete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/start_selector"
            android:gravity="center"
            android:text="@string/change_new_complete"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>


</FrameLayout>
